2004-10-27  Amilcar Lucas <amilcar@kdevelop.org>
	Exclude non API classes from the doxygen API documentation. 
	Please use the "doxygen doxyfile" command to test it. 

2004-10-27 Alexander Dymo <adymo@kdevelop.org>
    The first step in creating RubyQt/Korundum RAD environment -
    started to implement KDevDesigner integration for Ruby:
    works: automatic and manual subclass creation;
    doesn't work: function adding, editing and removing.

2004-10-25  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Added a ruby DCOP service project template
 * Improved the kapp Korundum application framework. It configures, builds and installs
   a C++ top level stub, that starts the ruby app. The ruby scripts are located via the
   KStandardDirs/KInstance mechanism, in directory ..share/apps/<appname>
 * k_dcop and k_dcop_signals declarations are shown as slot and signal declarations in
   the class parser.
 * =begin to =end comments are ignored
 * Added icons for Ruby configure and run options. The Run button now starts the main program
   with the ruby '-C' option to switch to the main program's directory.
 * Added missing scope attribute to the class parser methods
 

2004-10-23  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>

 * Implemented ruby slots/signals declaration navigation in the class browser
 * Atrr accessor and access control method lists can span multiple lines

2004-10-23 Alexander Dymo <adymo@kdevelop.org>
    * KDevelop documentation viewer and KDevAssistant:
      - implemented font configuration options;
      - disabled loading of KHTML plugins.
      
2004-10-21 Alexander Dymo <adymo@kdevelop.org>
    * KDevelop Platform:
      - implemented profiles library and editor engine;
      - implemented profiles editor (kdevprofileeditor application);
      - set up X-KDevelop-Property properties in .desktop files of KDevelop parts.

2004-10-21  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
